# src/main/java/com/devikapps/vaikaparts/endpoint/rest/controller/DemandController.java
@@ -1,0 +1,48 @@
+package com.devikapps.vaikaparts.endpoint.rest.controller;
+
+import com.devikapps.vaikaparts.endpoint.rest.controller.model.CreateDemandRequest;
+import com.devikapps.vaikaparts.model.classifier.PostStatus;
+import com.devikapps.vaikaparts.model.exchange.Demand;
+import com.devikapps.vaikaparts.service.DemandService;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/v1/demands")
+@RequiredArgsConstructor
+public class DemandController {
+  private final DemandService demandService;
+
+  @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+  public ResponseEntity<Demand> createDemand(@Valid @ModelAttribute CreateDemandRequest request) {
+    var demand = demandService.createDemand(request.description(), request.part());
+    return ResponseEntity.status(HttpStatus.CREATED).body(demand);
+  }
+
+  @GetMapping
+  public Page<Demand> getResearcherDemands(
+      @RequestParam(name = "status", required = false) PostStatus status,
+      @RequestParam(name = "page", required = false) Integer page,
+      @RequestParam(name = "size", required = false) Integer size) {
+
+    return status != null
+        ? demandService.getResearcherDemandsByStatus(status, page, size)
+        : demandService.getAllResearcherDemands(page, size);
+  }
+
+  @GetMapping("/{demandId}")
+  public Demand getDemandById(@PathVariable String demandId) {
+    return demandService.getDemandById(demandId);
+  }
+}
